--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -64,7 +64,7 @@ es.io.host=10.0.93.205:9300
 #cas.client-host-url=http://10.0.92.50:8082
 
 #cas sso
-cas.enable=false
+cas.enable=true
 cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:8088/cas
