--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,6 +38,9 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo /usr/sbin/nginx
 nginxConf.io.confurl=http://10.162.2.121
 nginxConf.io.serverIP=10.162.2.115,10.162.2.116,10.162.2.117,10.162.2.118,10.162.2.119
+#nginxserver
+nginx.server.DMZ=dmz
+nginx.server.USER=user
 
 #elasticsearch host
 resourceMmanage.address=http://10.161.35.65:1821/resreq/restlet/resourceArchive/showAllResource
