--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -26,19 +26,19 @@ spring.h2.console.enabled=true
 paas.codetemp.path=./codetemp
 
 #docker()
-docker.io.url=http://10.0.92.211:28015
+docker.io.url=http://192.168.12.34:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.0.92.211:5000
-docker.io.password=root
+docker.io.username=192.168.12.34:5000
+docker.io.password=bonc1234
 docker.io.email=root@bonc.com.cn
-docker.io.serverAddress=http://10.0.92.211:5000/v2/
+docker.io.serverAddress=http://192.168.12.34:5000/v2/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.0.92.211:8080/
+kubernetes.api.endpoint=http://192.168.12.34:8080/
 kubernetes.api.username=root
-kubernetes.api.password=123456
+kubernetes.api.password=bonc1234
 kubernetes.api.startport=30000
-kubernetes.api.address=10.0.92.211
+kubernetes.api.address=192.168.12.34
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
@@ -50,7 +50,7 @@ nginxConf.io.serverIP=10.0.93.1,10.0.93.141
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
-yumConf.io.address=10.0.92.211
+yumConf.io.address=192.168.12.34
 
 #elasticsearch host
 es.io.host=10.0.93.205:9300
@@ -64,7 +64,7 @@ es.io.host=10.0.93.205:9300
 #cas.client-host-url=http://10.0.92.50:8082
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://10.0.93.174:8088/cas/logout
 #cas client config
 cas.server-url-prefix=http://10.0.93.174:8088/cas
