--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -12,9 +12,9 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-#spring.datasource.url = jdbc:mysql://10.0.93.205:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+#spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 #spring.datasource.username = root
-#spring.datasource.password = root.123
+#spring.datasource.password = 123456
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #spring.jpa.database = MYSQL
 #spring.jpa.show-sql = true
