--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -1,13 +1,6 @@
-#server.port:8082
+server.port:8082
 
 # datasource
-<<<<<<< HEAD
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:./h2/dev_paas
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database = H2
-=======
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./h2/dev_paas
 spring.datasource.username=sa
@@ -24,22 +17,11 @@ spring.h2.console.enabled=true
 #spring.datasource.password = 123456
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #spring.jpa.database = MYSQL
->>>>>>> branch 'develop' of https://git.oschina.net/llizhuping/EPM_PAAS_CLOUD.git
 #spring.jpa.show-sql = true
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
-
-spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-spring.datasource.username = root
-spring.datasource.password = 123456
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.jpa.database = MYSQL
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=./codetemp
@@ -48,22 +30,14 @@ paas.codetemp.path=./codetemp
 docker.io.url=http://192.168.12.34:28015
 docker.io.dockerCertPath=/etc/docker
 docker.io.username=192.168.12.34:5000
-<<<<<<< HEAD
-docker.io.password=root
-=======
 docker.io.password=bonc1234
->>>>>>> branch 'develop' of https://git.oschina.net/llizhuping/EPM_PAAS_CLOUD.git
 docker.io.email=root@bonc.com.cn
 docker.io.serverAddress=http://192.168.12.34:5000/v2/
 
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.12.34:8080/
 kubernetes.api.username=root
-<<<<<<< HEAD
-kubernetes.api.password=hadoop
-=======
 kubernetes.api.password=bonc1234
->>>>>>> branch 'develop' of https://git.oschina.net/llizhuping/EPM_PAAS_CLOUD.git
 kubernetes.api.startport=30000
 kubernetes.api.address=192.168.12.34
 
@@ -72,8 +46,7 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=/sbin/nginx
 nginxConf.io.confurl=http://192.168.12.42
 nginxConf.io.serverIP=192.168.12.35,192.168.12.36
-<<<<<<< HEAD
-=======
+
 #nginxserver
 nginx.server.DMZ=dmz
 nginx.server.USER=user
