--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -12,7 +12,7 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 
-spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://192.168.12.42:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
