--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -18,25 +18,25 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.161.48.112:28015
+docker.io.url=http://10.161.48.130:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.161.48.112:5000
+docker.io.username=10.161.48.130:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.161.48.112:5000/v1/
+docker.io.serverAddress=http://10.161.48.130:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.161.48.124:8080/
+kubernetes.api.endpoint=http://10.161.48.130:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=2sA_8fF_6dG
 kubernetes.api.startport=30000
-kubernetes.api.address=10.161.48.124
+kubernetes.api.address=10.161.48.130
 
 #nginxConf()
 nginxConf.io.confpath=/bonc/nginx/nginx/conf.d/
 nginxConf.io.cmdpath=/bonc/nginx/nginx/sbin/nginx
 nginxConf.io.confurl=http://132.35.224.164
-nginxConf.io.serverIP=10.161.48.113,10.161.48.114,10.161.48.115,10.161.48.116,10.161.48.117,10.161.48.118,10.161.48.119,10.161.48.120,10.161.48.121,10.161.48.122,10.161.48.123,10.161.48.125,10.161.48.126,10.161.48.127
+nginxConf.io.serverIP=10.161.48.127,10.161.48.129
 
 #elasticsearch host
 resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
@@ -45,10 +45,10 @@ resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/s
 yumConf.io.address=10.161.48.112
 
 #elasticsearch host
-es.io.host=10.0.93.205:9300
+es.io.host=10.161.48.128:9300
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
 cas.server-url-prefix=http://132.35.227.90:8082/cas
@@ -56,7 +56,7 @@ cas.server-login-url=http://132.35.227.90:8082/cas/login
 cas.client-host-url=http://132.35.224.164:8080
 
 #monitor
-monitor.url=http://10.161.48.125:30002
+monitor.url=http://10.161.48.127:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
@@ -64,4 +64,3 @@ monitor.dbName=k8s
 ceph.name=admin
 ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
 ceph.key=QVFEb0sxVlhuRGVGRGhBQVBFcXN0N1dVd2VsMTZlT29kTXdKMWc9PQ==
-
