--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # datasource
 spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -52,7 +52,7 @@ yumConf.io.address=10.162.2.121
 es.io.host=10.162.2.121:9300
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://10.161.35.65:1821/cas/logout?service=http://10.161.35.65:1821/portal/
 #cas client config
 cas.server-url-prefix=http://10.161.35.65:1821/cas
