--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+server.port:80
+
 # datasource
 spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
@@ -14,58 +16,59 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+
 #temp code file path()
 paas.codetemp.path=../codetemp
 
 #docker()
-docker.io.url=http://10.162.2.121:28015
+docker.io.url=http://192.168.0.29:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.162.2.121:5000
+docker.io.username=192.168.0.29:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.162.2.121:5000/v1/
+docker.io.serverAddress=http://192.168.0.29:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.162.6.222:8080/
-kubernetes.api.username=docker
-kubernetes.api.password=Pe5_EZk6_DOx4
+kubernetes.api.endpoint=http://192.168.0.20:8080/
+kubernetes.api.username=paas
+kubernetes.api.password=123456
 kubernetes.api.startport=30010
-kubernetes.api.address=10.162.6.222
-
+kubernetes.api.address=192.168.0.20
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
-nginxConf.io.cmdpath=sudo /usr/sbin/nginx
-nginxConf.io.confurl=http://10.162.2.121
-nginxConf.io.serverIP=10.162.2.115,10.162.2.116,10.162.2.117,10.162.2.118,10.162.2.119
+nginxConf.io.cmdpath=sudo nginx
+nginxConf.io.confurl=http://192.168.0.29
+nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
+
 #nginxserver
 nginx.server.DMZ=dmz
 nginx.server.USER=user
 
 #elasticsearch host
-resourceMmanage.address=http://10.161.35.65:1821/resreq/restlet/resourceArchive/showAllResource
+resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/showAllResource
 
 #yum_source
-yumConf.io.address=10.162.2.121
+yumConf.io.address=10.161.48.112
 
 #elasticsearch host
-es.io.host=10.162.2.121:9300
+es.io.host=192.168.0.29:9300
 
 #cas sso
-cas.enable=true
-cas.server-logout-url=http://10.161.35.65:1821/cas/logout?service=http://10.161.35.65:1821/portal/
+cas.enable=false
+cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
-cas.server-url-prefix=http://10.161.35.65:1821/cas
-cas.server-login-url=http://10.161.35.65:1821/cas/login
-cas.client-host-url=http://10.162.2.121:8080
+cas.server-url-prefix=http://132.35.227.90:8082/cas
+cas.server-login-url=http://132.35.227.90:8082/cas/login
+cas.client-host-url=http://132.35.224.164:8080
 
 #monitor
-monitor.url=http://10.162.2.115:30002
+monitor.url=http://192.168.0.26:30002
 monitor.username=root
 monitor.password=root
 monitor.dbName=k8s
 
 ceph.name=admin
-ceph.monitor=192.168.12.30:6789,192.168.12.31:6789,192.168.12.32:6789
-ceph.key=QVFEb0sxVlhuRGVGRGhBQVBFcXN0N1dVd2VsMTZlT29kTXdKMWc9PQ==
+ceph.monitor=192.168.0.21:6789,192.168.0.22:6789,192.168.0.23:6789
+ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
 
