--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,3 +1,5 @@
+server.port:80
+
 # datasource
 spring.datasource.url = jdbc:mysql://10.161.48.112:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
