--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,7 @@
-server.port:80
-
 # datasource
 spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 
+spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -15,7 +13,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
 
 #temp code file path()
 paas.codetemp.path=../codetemp
@@ -57,7 +54,6 @@ es.io.host=192.168.0.29:9300
 #cas sso
 cas.enable=false
 cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90/portal/
-
 #cas client config
 cas.server-url-prefix=http://132.35.227.90:8082/cas
 cas.server-login-url=http://132.35.227.90:8082/cas/login
@@ -72,4 +68,3 @@ monitor.dbName=k8s
 ceph.name=admin
 ceph.monitor=192.168.0.21:6789,192.168.0.22:6789,192.168.0.23:6789
 ceph.key=QVFDYWhZUlh6Y0pnR0JBQStzV2NGTURKNm9zQmtiM0w4TmxuWVE9PQ==
-
