--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # datasource
-spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -16,6 +16,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=../codetemp
+server.port:8082
 
 #docker()
 docker.io.url=http://192.168.0.29:28015
@@ -34,10 +35,16 @@ kubernetes.api.endport=30200
 kubernetes.api.address=192.168.0.20
 
 #nginxConf()
-nginxConf.io.confpath=/etc/nginx/conf.d/
-nginxConf.io.cmdpath=sudo nginx
-nginxConf.io.confurl=http://192.168.0.29
+nginxConf.io.confpath=C:/Users/zhoutao/conf/conf.d/
+nginxConf.io.cmdpath=nginx.exe
+nginxConf.io.confurl=http://192.168.0.40
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
+
+#nginxConf()
+#nginxConf.io.confpath=/etc/nginx/conf.d/
+#nginxConf.io.cmdpath=sudo nginx
+#nginxConf.io.confurl=http://192.168.0.29
+#nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
 
 #nginxserver
 nginx.server.DMZ=dmz
