--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # datasource
 spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -35,16 +35,10 @@ kubernetes.api.endport=30200
 kubernetes.api.address=192.168.0.20
 
 #nginxConf()
-nginxConf.io.confpath=C:/Users/zhoutao/conf/conf.d/
-nginxConf.io.cmdpath=nginx.exe
-nginxConf.io.confurl=http://192.168.0.40
+nginxConf.io.confpath=/etc/nginx/conf.d/
+nginxConf.io.cmdpath=sudo nginx
+nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-
-#nginxConf()
-#nginxConf.io.confpath=/etc/nginx/conf.d/
-#nginxConf.io.cmdpath=sudo nginx
-#nginxConf.io.confurl=http://192.168.0.29
-#nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
 
 #nginxserver
 nginx.server.DMZ=dmz
