--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,6 @@ server.port:8082
 
 # datasource
 spring.datasource.url = jdbc:mysql://192.168.0.120:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
-spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -40,8 +39,9 @@ kubernetes.api.address=192.168.0.20
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
-nginxConf.io.confurl=http://192.168.0.29
+nginxConf.io.confurl=http://192.168.0.120
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
+nginxConf.io.serverAddr=http://192.168.0.26
 
 #nginxserver
 nginx.server.DMZ=dmz
