--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -39,6 +39,7 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
+nginxConf.io.serverAddr=http://192.168.0.26
 
 #nginxserver
 nginx.server.DMZ=dmz
