--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://192.168.0.120:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -18,7 +18,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #temp code file path()
 paas.codetemp.path=../codetemp
-server.port:8082
 
 #docker()
 docker.io.url=http://192.168.0.29:28015
@@ -39,7 +38,7 @@ kubernetes.api.address=192.168.0.20
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
-nginxConf.io.confurl=http://192.168.0.120
+nginxConf.io.confurl=http://192.168.0.40
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
 nginxConf.io.serverAddr=http://192.168.0.26
 
@@ -52,7 +51,6 @@ resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/s
 
 #yum_source
 yumConf.io.address=10.161.48.112
-
 #elasticsearch host
 es.io.host=192.168.0.29:9300
 
