--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -32,6 +32,7 @@ kubernetes.api.endpoint=http://192.168.0.20:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=123456
 kubernetes.api.startport=30000
+kubernetes.api.endport=30200
 kubernetes.api.address=192.168.0.20
 
 #nginxConf()
@@ -39,7 +40,7 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=http://192.168.0.26
+nginxConf.io.serverAddr=http://192.168.0.29
 
 #nginxserver
 nginx.server.DMZ=dmz
@@ -55,12 +56,12 @@ yumConf.io.address=10.161.48.112
 es.io.host=192.168.0.29:9300
 
 #cas sso
-cas.enable=false
-cas.server-logout-url=http://132.35.227.90:8082/cas/logout?service=http://132.35.227.90/portal/
+cas.enable=true
+cas.server-logout-url=http://192.168.0.27:30004/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
-cas.server-url-prefix=http://132.35.227.90:8082/cas
-cas.server-login-url=http://132.35.227.90:8082/cas/login
-cas.client-host-url=http://132.35.224.164:8080
+cas.server-url-prefix=http://192.168.0.27:30004/cas
+cas.server-login-url=http://192.168.0.27:30004/cas/login
+cas.client-host-url=http://192.168.0.29:8080
 
 #monitor
 monitor.url=http://192.168.0.26:30002
