--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,7 +1,7 @@
-server.port:80
+server.port:8080
 
 # datasource
-spring.datasource.url = jdbc:mysql://192.168.0.42:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -56,7 +56,7 @@ yumConf.io.address=10.161.48.112
 es.io.host=192.168.0.29:9300
 
 #cas sso
-cas.enable=true
+cas.enable=false
 cas.server-logout-url=http://192.168.0.27:30004/cas/logout?service=http://132.35.227.90/portal/
 #cas client config
 cas.server-url-prefix=http://192.168.0.27:30004/cas
