--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 server.port:8082
 
 # datasource
-spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://192.168.0.29:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
@@ -28,12 +28,12 @@ docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.29:5000/v1/
 
 #kubernetes()
-kubernetes.api.endpoint=http://192.168.0.20:8080/
+kubernetes.api.endpoint=http://192.168.0.25:8080/
 kubernetes.api.username=paas
 kubernetes.api.password=123456
-kubernetes.api.startport=30010
+kubernetes.api.startport=30000
 kubernetes.api.endport=30200
-kubernetes.api.address=192.168.0.20
+kubernetes.api.address=192.168.0.25
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
