--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,7 @@ docker.io.username=192.168.0.29:5000
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
 docker.io.serverAddress=http://192.168.0.29:5000/v1/
-docker.io.node.url=http://192.168.0.26:28015,http://192.168.0.27:28015,http://192.168.0.28:28015,http://192.168.0.51:28015,http://192.168.0.52:28015,http://192.168.0.53:28015,
+docker.io.nodeUrl=http://192.168.0.26:28015,http://192.168.0.27:28015,http://192.168.0.28:28015,http://192.168.0.51:28015,http://192.168.0.52:28015,http://192.168.0.53:28015,
 
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.0.20:8080/
