--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -75,9 +75,9 @@ cas.server-login-url=http://132.35.227.90:8082/cas/login
 cas.client-host-url=http://132.35.224.164:8080
 
 #monitor
-monitor.url=http://192.168.0.26:30002
+monitor.url=http://192.168.0.26:30029
 monitor.username=root
-monitor.password=root
+monitor.password=root.123
 monitor.dbName=k8s
 
 ceph.name=admin
