--- a/src/main/resources/application-yq.properties
+++ b/src/main/resources/application-yq.properties
@@ -33,6 +33,7 @@ docker.io.username=192.168.5.115:5000
 docker.io.password=123456
 docker.io.email=root@bonc.com.cn
 docker.io.serverAddress=http://192.168.5.115:5000/v2/
+docker.io.nodeUrl=http://192.168.0.26:28015,http://192.168.0.27:28015,http://192.168.0.28:28015,http://192.168.0.51:28015,http://192.168.0.52:28015,http://192.168.0.53:28015,
 
 #kubernetes()
 kubernetes.api.endpoint=http://192.168.5.129:8080/
