--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -22,7 +22,7 @@ paas.codetemp.path=../codetemp
 #temp image file path()
 paas.image.path=../downimage
 #temp save image file path()
-paas.saveimage.path=/home/paas/paas/apache-tomcat-8.0.32/downimage/
+paas.saveimage.path=/home/docker/paas/apache-tomcat-8.0.32/downimage/
 
 #docker()
 docker.io.url=http://10.162.17.12:28015
@@ -34,10 +34,10 @@ docker.io.serverAddress=http://10.162.17.12:5000/v1/
 docker.io.nodeUrl=http://10.162.17.12:28015
 
 #docer ssh()
-docker.image.url=192.168.0.29:5000
-docker.ssh.username=paas
-docker.ssh.password=123456
-docker.ssh.address=192.168.0.29
+docker.image.url=10.162.17.12:5000
+docker.ssh.username=docker
+docker.ssh.password=Fut0_Za3_Aj5
+docker.ssh.address=10.162.17.12
 
 
 #kubernetes()
