--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,6 +19,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #temp code file path()
 paas.codetemp.path=../codetemp
 
+#ceph()
+ceph.ssh.url=127.0.0.1
+ceph.ssh.username=root
+ceph.ssh.password=123456
+ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
+ceph.ssh.mountpoint=/mnt/k8s/
+
 #docker()
 docker.io.url=http://192.168.0.29:28015
 docker.io.dockerCertPath=/etc/docker
