--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -52,7 +52,7 @@ nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.40
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=http://192.168.0.29
+nginxConf.io.serverAddr=unicom.bonc.com
 
 #nginxserver
 nginx.server.DMZ=dmz
