--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,17 +19,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #temp code file path()
 paas.codetemp.path=../codetemp
 
-#ceph()
-ceph.ssh.url=127.0.0.1
-ceph.ssh.username=root
-ceph.ssh.password=123456
-ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
-ceph.ssh.mountpoint=/mnt/k8s/
-
 #temp image file path()
 paas.image.path=../downimage
 #temp save image file path()
 paas.saveimage.path=/home/paas/paas/apache-tomcat-8.0.32/downimage/
+
+#ceph()
+ceph.ssh.url=192.168.0.29
+ceph.ssh.username=root
+ceph.ssh.password=root.123
+ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
+ceph.ssh.mountpoint=/mnt/k8s/
 
 #docker()
 docker.io.url=http://192.168.0.29:28015
