--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -24,6 +24,14 @@ paas.image.path=../downimage
 #temp save image file path()
 paas.saveimage.path=/home/docker/paas/apache-tomcat-8.0.32/downimage/
 
+#ceph()
+ceph.ssh.url=192.168.0.29
+ceph.ssh.username=root
+ceph.ssh.password=root.123
+ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
+ceph.ssh.mountpoint=/mnt/k8s/
+
+
 #docker()
 docker.io.url=http://10.162.17.12:28015
 docker.io.dockerCertPath=/etc/docker
