--- a/src/main/resources/application-profile.properties
+++ b/src/main/resources/application-profile.properties
@@ -1,7 +1,7 @@
-server.port:8080
+server.port:30000
 
 # datasource
-spring.datasource.url = jdbc:mysql://localhost:3306/epm_paas?characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url = jdbc:mysql://localhost:30001/epm_paas?characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123.bonc
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -24,42 +24,42 @@ paas.image.path=../downimage
 paas.saveimage.path=/home/docker/paas/apache-tomcat-8.0.32/downimage/
 
 #ceph()
-ceph.ssh.url=192.168.0.29
-ceph.ssh.username=root
-ceph.ssh.password=root.123
-ceph.ssh.mountexec=mount -t ceph 192.168.0.21:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
+ceph.ssh.url=10.162.17.13
+ceph.ssh.username=docker
+ceph.ssh.password=Fut0_Za3_Aj5
+ceph.ssh.mountexec=mount -t ceph 10.162.16.116:6789:/ /mnt/k8s/ -o name=admin,secretfile=admin.secret
 ceph.ssh.mountpoint=/mnt/k8s/
 
 #docker()
-docker.io.url=http://10.162.17.12:28015
+docker.io.url=http://10.162.17.13:28015
 docker.io.dockerCertPath=/etc/docker
-docker.io.username=10.162.17.12:5000
+docker.io.username=10.162.17.13:30002
 docker.io.password=root
 docker.io.email=xx@bonc.com.cn
-docker.io.serverAddress=http://10.162.17.12:5000/v1/
-docker.io.nodeUrl=http://10.162.17.12:28015
+docker.io.serverAddress=http://10.162.17.13:30002/v1/
+docker.io.nodeUrl=http://10.162.17.13:28015,http://10.162.16.123:28015,http://10.162.16.125:28015
 
 #docer ssh()
-docker.image.url=10.162.17.12:5000
+docker.image.url=10.162.17.13:30002
 docker.ssh.username=docker
 docker.ssh.password=Fut0_Za3_Aj5
-docker.ssh.address=10.162.17.12
+docker.ssh.address=10.162.17.13
 
 
 #kubernetes()
-kubernetes.api.endpoint=http://10.162.17.10:8080/
+kubernetes.api.endpoint=http://10.162.17.13:8080/
 kubernetes.api.username=docker
 kubernetes.api.password=Fut0_Za3_Aj5
-kubernetes.api.startport=30000
-kubernetes.api.endport=30200
-kubernetes.api.address=10.162.17.10
+kubernetes.api.startport=30020
+kubernetes.api.endport=30600
+kubernetes.api.address=10.162.17.13
 
 #nginxConf()
 nginxConf.io.confpath=/etc/nginx/conf.d/
 nginxConf.io.cmdpath=sudo nginx
 nginxConf.io.confurl=http://192.168.0.29
 nginxConf.io.serverIP=192.168.0.26,192.168.0.27,192.168.0.28
-nginxConf.io.serverAddr=unicom.bonc.com
+nginxConf.io.serverAddr=yz.local:8081
 
 #nginxserver
 nginx.server.DMZ=dmz
@@ -72,7 +72,7 @@ resourceMmanage.address=http://10.0.93.174:8088/resreq/restlet/resourceArchive/s
 yumConf.io.address=10.162.17.11
 
 #elasticsearch host
-es.io.host=10.162.16.114:8300
+es.io.host=10.162.2.112:10300
 es.io.cluster-name=bonc_elk_DB
 
 #cas sso
